--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
     <div class="about">
         The time was 2008, our batch started Quantum Cosmo School and college journey through the initiation class. The current center of Quantum Foundation Quantumom was our campus at this time. The chalk in our study is from there. Our first two years of primary school were spent there.<br>In the year 2012, we got up to class three. Our campus has changed in this year. Our new campus is now Girls' Ikran Campus, then named Girifikran and the residence was the present Sufian. Our primary school life passed in this campus.<br>In the year 2015, we passed the primary school and entered the high school. We got a new campus again named Vally Hikman. Our high school life passed in this campus. The memories of this campus will be remembered forever.<br>The year was 2020, we crossed the hurdle of high school and entered college as batch 9<sup>th</sup> of Quantum Cosmo College, we found a new campus again named Sobujayon. We spent two precious years of college in this campus. Our Quantum Cosmo School and college life ended with HSC exam in December, 2022.<br>Every campus of Quantum Cosmo School and College will be remembered forever. Do not forget any memories of Quantum Cosmo School and College life.
-        We are so lucky as a student of <strong>Quantum Cosmo School and College</strong>.
+        We are so lucky as a student of<br><strong>Quantum Cosmo School and College</strong>.
     </div>
 
     <div class="thanks-lord">
@@ -41,7 +41,7 @@
         <strong> Abdus Samad Kofil Uddin</strong>
         Southeast University<br>
         Computer Science and Engineering (CSE)<br>
-        07 July, 2023 <br>
+        10 July, 2023 <br>
         <a class="mail" href="https://mail.google.com/mail/u/0/?tab=rm#inbox?compose=new">E-mail:
             2023100000438@seu.edu.bd</a>
     </div>
