--- a/member.html
+++ b/member.html
@@ -195,7 +195,7 @@
         <div class="ditails3">
             <img class="profile" src="Images/822.jpg">
             <div class="status">
-                M. Belel<br>Quantaa: 822
+                M. Belal<br>Quantaa: 822
             </div>
         </div>
 
