--- a/member.html
+++ b/member.html
@@ -17,7 +17,7 @@
     </div>
     <div class="container">
         <div class="head">
-            Quantum Cosmo College <span>All member of 9<sup>th</sup> batch
+            Quantum Cosmo College <span>All members of 9<sup>th</sup> batch
             </span>
         </div>
 
