--- a/member.html
+++ b/member.html
@@ -164,7 +164,7 @@
         <div class="ditails3">
             <img class="profile" src="Images/763.jpg">
             <div class="status">
-                Abdullah Sordar<br>Quantaa: 763
+                Abdullah Sarder<br>Quantaa: 763
             </div>
         </div>
         <div class="ditails1">
