--- a/member.html
+++ b/member.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quantum Cosmo College | All Member</title>
+    <link rel="icon" href="Images/logo.png">
     <link rel="stylesheet" href="member.css">
 </head>
 
