--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quantum Cosmo College | Gallery</title>
+    <title>Quantum Cosmo College | Gallery</title>    
+    <link rel="icon" href="Images/logo.png">
     <link rel="stylesheet" href="gallery.css">
 </head>
 
