--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quantum Cosmo College | Batch: 9th</title>
+  <meta name="keywords" content="Quantum, Quantum Cosmo School and College, Quantum Cosmo College, Cosmo College">
   <link rel="stylesheet" href="home.css">  
   <link rel="icon" href="Images/logo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
